--- a/gostudy/package.json
+++ b/gostudy/package.json
@@ -6,7 +6,11 @@
     "axios": "^0.18.0",
     "dateformat": "^3.0.3",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
+    "react-csv": "^1.0.14",
+    "react-datepicker": "^1.5.0",
+    "react-day-picker": "^7.1.10",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "react-table": "^6.8.6"
